--- a/styles.css
+++ b/styles.css
@@ -144,3 +144,14 @@ caption {
 area {
   border: 1px solid black;
 }
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  background-color: beige;
+  padding: 3px 20px 3px 0px;
+  text-align: right;
+  width: 100%;
+  box-sizing: border-box;
+}
