--- a/interface/styles.css
+++ b/interface/styles.css
@@ -50,6 +50,14 @@ h2 {
   color: rgb(83, 83, 83)
 }
 
+.datasetAuthor {
+  display: block;
+  margin-left: 30px;
+  font-size: small;
+  margin-top: 30px;
+  color: rgb(83, 83, 83)
+}
+
 .datasetDate {
   display: inline-block;
   width: 100px;
