--- a/interface/styles.css
+++ b/interface/styles.css
@@ -33,6 +33,12 @@ h2 {
   padding-top: 10px;
 }
 
+h3 {
+  font-weight: 400;
+  font-size: large;
+  padding-top: 10px;
+}
+
 
 .datasetName { 
   display: inline-block;
@@ -133,7 +139,7 @@ input[type=submit].logout {
   margin: 0px;
 }
 
-input[type=submit].deleteButton {
+input[type=submit].deleteButton, button.deleteButton {
   background-color: rgb(255, 84, 0);
   padding: 5px;
 
