--- a/interface/styles.css
+++ b/interface/styles.css
@@ -151,6 +151,10 @@ input[type=submit].deleteButton, button.deleteButton {
   color: red;
 }
 
+.redBg {
+  background-color: red;
+}
+
 caption {
   padding-bottom: 10px;
 }
